Close six things the tool said it could not do, and one it was doing wrong
An audit of every "needs a restart" message asked one question of each: is this
the JVM refusing, or is it us not having tried. Six turned out to be the second.

Enum appends survive JDK 26. JEP 471 closes sun.misc.Unsafe, and writing a final
field is what adding a constant needs, so the feature was written as ending on a
schedule. What the schedule closes is that one class; jdk.internal.misc.Unsafe is
what the JDK uses for the same operations itself, is not deprecated, and is not
governed by --sun-misc-unsafe-memory-access. It is only unexported, and an agent
can open it, which this one already does for jdk.internal.reflect. Measured from
a bootstrap-loaded class on JDK 21: before the open, InaccessibleObjectException;
after it, a static final field written, in the same run where core reflection and
a VarHandle both refuse that field.

Method security is re-read. @PreAuthorize is resolved once per method and filed
under a key redefinition does not change, so an edited rule kept being enforced
as written with nothing reporting it, and a rule edited on a service never
reached the security path at all because a service is not a security
configuration. A live Boot 3.3 run then corrected the implementation twice: the
bean is a DeferringMethodInterceptor holding a supplier, so asking for the
concrete type answers nothing, and clearing the cache is half the job because the
next call refills it from the stale Method the AOP invocation carries. Both
halves measured, both directions, @Secured and JSR-250 included.

A bean that takes a changed @Value through its constructor is rebuilt, the same
answer the constructor-bound properties bean already had. A saved message bundle
is re-read outside SAP Commerce: the reloadable source ships a reset, and the one
Boot autoconfigures ships none, so its caches and the JDK ResourceBundle cache
underneath them are cleared instead.

The sources that inlined a change